<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="title_home">I\'m Hungry!</string>
    <string name="title_dashboard">List View</string>
    <string name="title_notifications">Workmates</string>
    <string name="auth_activity_subtitle">Find a nice restaurant and invite your co-workers for lunch!</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->

    <string name="facebook_application_id">672513384575715</string>
    <string name="facebook_login_protocol_scheme">fb672513384575715</string>
    <string name="facebook_client_token">08f086d1ebbe51d8a203d89edba77731</string>
    <string name="google_places_api_key" translatable="false">AIzaSyDLDp27epOVPXvZpFwykDo5d24QJb3y2CQ</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John SMITH</string>
    <string name="nav_header_subtitle">jsmith.1337@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">YOUR LUNCH</string>
    <string name="menu_gallery">SETTINGS</string>
    <string name="menu_slideshow">LOGOUT</string>
    <string name="title_activity_restaurant_details">RestaurantDetailsActivity</string>
    <string name="large_text">

    </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="button_call">CALL</string>
    <string name="button_like">LIKE</string>
    <string name="button_website">WEBSITE</string>
    <string name="restaurant_name">Le Zinc</string>
    <string name="restaurant_address">French - 12 rue du Faubourg Poissonnière</string>
    <string name="restaurant_opening_hours">Open until 7pm</string>
    <string name="restaurant_distance">%dm</string>
    <string name="attendees_number">(2)</string>

</resources>