<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/restaurant_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/restaurant_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/restaurant_distance"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/restaurant_distance" />

    <TextView
        android:id="@+id/restaurant_address"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/restaurant_address"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/attendees_icon"
        app:layout_constraintEnd_toStartOf="@+id/attendees_icon"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/restaurant_opening_hours"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:layout_marginStart="16dp"
        android:text="@string/restaurant_opening_hours"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/restaurant_rating"
        app:layout_constraintEnd_toStartOf="@+id/restaurant_rating"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/restaurant_picture"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/people_eating"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/restaurant_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/restaurant_distance"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toStartOf="@+id/restaurant_picture"
        app:layout_constraintTop_toTopOf="@+id/restaurant_picture" />

    <TextView
        android:id="@+id/attendees_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:text="@string/attendees_number"
        app:layout_constraintEnd_toStartOf="@+id/restaurant_picture"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_distance" />

    <ImageView
        android:id="@+id/attendees_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_person_outline_24"
        app:layout_constraintBottom_toBottomOf="@id/attendees_number"
        app:layout_constraintEnd_toStartOf="@+id/attendees_number"
        android:contentDescription="TODO" />

    <RatingBar
        android:id="@+id/restaurant_rating"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:numStars="3"
        android:rating="1"
        android:stepSize="0.5"
        android:progressTint="@color/quantum_yellow"
        app:layout_constraintBottom_toBottomOf="@+id/restaurant_picture"
        app:layout_constraintEnd_toStartOf="@+id/restaurant_picture" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
