<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantDetailsActivity">

    <ImageView
        android:id="@+id/restaurant_details_picture"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="percent"
        app:layout_constraintHeight_percent="0.40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/people_eating"
        android:contentDescription="TODO" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_restaurant_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@android:color/white"
        app:borderWidth="0dp"
        android:src="@drawable/ic_green_check_circle_24"
        app:layout_constraintBottom_toBottomOf="@id/restaurant_details_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_details_picture"
        android:contentDescription="TODO" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="0dp"
        app:cardBackgroundColor="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="percent"
        app:layout_constraintHeight_percent="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_details_picture">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/restaurant_details_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="220dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/restaurant_name"
                android:textSize="@dimen/text_margin"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RatingBar
                android:id="@+id/restaurant_details_rating"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:numStars="3"

                android:stepSize="0.5"
                android:progressTint="@color/quantum_yellow"
                app:layout_constraintStart_toEndOf="@+id/restaurant_details_name"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/restaurant_details_address"
                android:layout_width="280dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/restaurant_address"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/restaurant_details_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_call_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight="percent"
        android:backgroundTint="@android:color/white"
        android:drawableTop="@drawable/ic_baseline_phone_24"
        android:drawableTint="@color/red"
        android:text="@string/button_call"
        android:textColor="@color/red"
        android:textStyle="bold"
        app:layout_constraintHeight_percent="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_details"
        app:layout_constraintWidth="percent"
        app:layout_constraintWidth_percent="0.333"
        app:cornerRadius="0dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_like_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight="percent"
        android:backgroundTint="@android:color/white"
        android:drawableTop="@drawable/baseline_star_outline_24"
        android:drawableTint="@color/red"
        android:text="@string/button_like"
        android:textColor="@color/red"
        android:textStyle="bold"
        app:layout_constraintHeight_percent="0.125"
        app:layout_constraintStart_toEndOf="@+id/button_call_detail"
        app:layout_constraintTop_toBottomOf="@+id/cardView_details"
        app:layout_constraintWidth="percent"
        app:layout_constraintWidth_percent="0.333"
        app:cornerRadius="0dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_website_detail"
        android:backgroundTint="@android:color/white"
        android:drawableTop="@drawable/ic_website_public_24"
        android:drawableTint="@color/red"
        android:text="@string/button_website"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="percent"
        app:layout_constraintHeight_percent="0.125"
        app:layout_constraintStart_toEndOf="@+id/button_like_detail"
        app:layout_constraintTop_toBottomOf="@+id/cardView_details"
        app:layout_constraintWidth="percent"
        app:layout_constraintWidth_percent="0.333"
        app:cornerRadius="0dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/workmates_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight="percent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintTop_toBottomOf="@+id/button_like_detail"
        tools:listitem="@layout/restaurant_list_items"/>

</androidx.constraintlayout.widget.ConstraintLayout>
